feat(know) 知识库共享功能
